// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bulk queue 1`] = `
"var handler = require(\\"someHandler\\");
module.exports = (handler.default || handler)(\\"bulk-queue.js\\", [{\\"name\\":\\"e\\",\\"bulk\\":\\"slowpoke\\"}], {});"
`;

exports[`empty case 1`] = `
"var handler = require(\\"someHandler\\");
module.exports = (handler.default || handler)(\\"empty.js\\", [], {});"
`;

exports[`runtime options case 1`] = `
"var handler = require(\\"someHandler\\");
module.exports = (handler.default || handler)(\\"simple.js\\", [{\\"name\\":\\"b\\",\\"bulk\\":\\"default\\"}], {\\"headers\\":{\\"foo\\":\\"bar\\"}});"
`;

exports[`simple case 1`] = `
"var handler = require(\\"someHandler\\");
module.exports = (handler.default || handler)(\\"simple.js\\", [{\\"name\\":\\"b\\",\\"bulk\\":\\"default\\"}], {});"
`;

exports[`typescript case 1`] = `
"var handler = require(\\"someHandler\\");
module.exports = (handler.default || handler)(\\"typescript.js\\", [{\\"name\\":\\"b\\",\\"bulk\\":\\"default\\"}], {});"
`;
